<resources>
    <string name="app_name">incubator</string>
    <string name="bishal_s_app">bishal\'s app</string>
    <string name="character_animation">character animation</string>
    <string name="incubator_tagline">Incubate your \ncreativity</string>
    <string name="app_description">Share your emerging thoughts and ideas to the world.
        Bring the innovation everyone need with your peer groups.
        \nMake communities, family and friends. \n\n<b>Be at Home here…Incubator</b></string>
    <string name="let_s_incubate">Let\'s Incubate</string>
    <string name="create_your_account">Create your account</string>
    <string name="name_input_field">name input field</string>
    <string name="name_hint">Name / Username</string>
    <string name="enter_your_username">Enter Your Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="ask_sign_in_text">Already heave an account ?  <b><font color='#0677E8'>Sign in</font></b></string>
    <string name="sign_up_with_google">Sign up with google</string>
    <string name="sign_up_with_facebook">Sign up with facebook</string>
    <string name="or_continue_with_any_one">Or continue with any one</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="sign_in_to_continue">Sign in \nto continue</string>
    <string name="back_button">back arrow icon</string>
    <string name="sign_in">Sign in</string>
    <string name="ask_create_account">Don\'t have an account ? <b><font color='#0677E8'>Create now</font></b></string>
    <string name="or_sign_in_with">Or sign in with</string>
    <string name="home">home</string>
    <string name="search">search</string>
    <string name="add">add</string>
    <string name="incubates">incubates</string>
    <string name="profile">profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification_button">notification icon</string>
    <string name="add_profile_image_icon">add profile image icon</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="welcome_to_incubator">Welcome to \nIncubator!</string>
    <string name="forgot_password">Forgot password ? <font color='#0677E8'>Reset</font></string>
    <string name="default_web_client_id">389356540687-4fj12b2fqupttvimagl0r6tf4774de7r.apps.googleusercontent.com</string>
    <string name="sign_out">Sign \nOut</string>
    <!--    facebook app id and client token-->
    <string name="facebook_app_id">652856466990342</string>
    <string name="facebook_client_token">b8fe29a18e20a28d699b8b2222271449</string>
    <string name="fb_login_protocol_scheme">fb652856466990342</string>
    <string name="user_s_profile">User\'s Profile</string>
    <string name="side_drawer">side drawer</string>
    <string name="profile_name_hint">User Name</string>
    <string name="posts_count">0</string>
    <string name="posts">posts</string>
    <string name="followers_count">0</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="following_count">0</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="share_profile">Share Profile</string>
    <string name="profile_user_bio">User short bio description</string>
    <string name="profile_user_name">\@user_name</string>
    <string name="profile_tab_for_posts_incubates">profile tab for posts/incubates</string>
    <string name="chat_icon">chat icon</string>
    <string name="notification_icon">notification icon</string>
    <string name="search_hint">Search…</string>
    <string name="camera_icon">camera icon</string>
    <string name="notification">Notification</string>
    <string name="tick_icon">Tick icon</string>
    <string name="close_icon">Close icon</string>
    <string name="change_avatar">Change Avatar</string>
    <string name="chats">Chats</string>
    <string name="settings">Settings</string>
    <string name="edit_your_name">Edit your name</string>
    <string name="edit_your_bio">Edit your bio</string>
    <string name="edit_your_username">Edit your username</string>
    <string name="change_password">Change password</string>
    <string name="delete_account">Delete Account</string>
    <string name="follow">Follow</string>
    <string name="user_new_post">user new post</string>
    <string name="say_something_about_your_post">Say something about your post…</string>
    <string name="caption">Say something about your post…</string>
    <string name="new_post">New post</string>
    <string name="fit_screen">fit screen</string>
    <string name="select_picture">Select picture</string>
    <string name="item_image_placeholder">item image placeholder</string>
    <string name="select_from_gallery">Select from gallery</string>
    <string name="post_category_selection">Post category selection</string>
    <string name="next">Next</string>
    <string name="post_selection_ui">post selection ui</string>
    <string name="image_path">Recent</string>
    <string name="select_multiple_check">select multiple check</string>
    <string name="share">Share</string>
    <string name="post_selected_for_post">Image for post</string>
    <string name="caption_screen">caption screen</string>
    <string name="write_caption">Write something about your post…</string>
    <string name="users_posts">users posts</string>
    <string name="posts_title">Posts</string>
    <string name="username">username</string>
    <string name="location">location</string>
    <string name="more_options">more options</string>
    <string name="like">like</string>
    <string name="comment">comment</string>
    <string name="save">save_post</string>
    <string name="likes_string">Liked by <b>bishal_prasad</b>, <b>nick</b>, <b>darius</b> and <b>30 others</b>.</string>
    <string name="caption_string">New posts #lookingcool</string>
    <string name="post_date_string">3 days ago</string>
    <string name="view_comments_string">View all <b>4 comments</b></string>
</resources>