<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/nav_home_icon"
        android:title="@string/home"/>

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/search_normal"
        android:title="@string/search"/>

    <item
        android:id="@+id/addFragment"
        android:icon="@drawable/nav_add_icon"
        android:title="@string/add"/>

    <item
        android:id="@+id/incubatesFragment"
        android:icon="@drawable/nav_incubates_icon"
        android:title="@string/incubates"/>

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/nav_user_icon"
        android:title="@string/profile"/>

</menu>