<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/dark_background"
    android:orientation="vertical"
    android:contentDescription="@string/user_s_profile"
    tools:context=".fragments.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/arrow_left"
            android:contentDescription="@string/back_button"
            app:tint="@color/white"
            android:scaleType="centerCrop"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/sideDrawerButton"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/menu"
            app:tint="@color/white"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/side_drawer"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/user_filled"
            app:civ_border_color="@color/pink"
            app:civ_border_width="3dp"
            app:civ_circle_background_color="@android:color/darker_gray"
            android:layout_marginTop="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/backButton"/>

        <TextView
            android:id="@+id/profileNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_name_hint"
            android:fontFamily="@font/poppins_bold"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profileImageView"/>

        <TextView
            android:id="@+id/profileUserNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_user_name"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profileNameTextView"/>

        <LinearLayout
            android:id="@+id/profileNumbersSection"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profileUserNameTextView">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/postsCountSection"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/postsCount"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.7"
                    android:gravity="center"
                    android:text="@string/posts_count"
                    android:fontFamily="@font/poppins_bold"
                    android:textSize="20sp"
                    android:textColor="@color/teal_50"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.3"
                    android:text="@string/posts"
                    android:gravity="center"
                    android:fontFamily="@font/poppins_light"
                    android:textAllCaps="true"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14sp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/followersCountSection"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/followersCount"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.7"
                    android:gravity="center"
                    android:text="@string/followers_count"
                    android:fontFamily="@font/poppins_bold"
                    android:textSize="20sp"
                    android:textColor="@color/teal_50"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.3"
                    android:text="@string/followers"
                    android:gravity="center"
                    android:fontFamily="@font/poppins_light"
                    android:textAllCaps="true"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14sp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/followingCountSection"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/followingCount"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.7"
                    android:gravity="center"
                    android:text="@string/following_count"
                    android:fontFamily="@font/poppins_bold"
                    android:textSize="20sp"
                    android:textColor="@color/teal_50"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.3"
                    android:text="@string/following"
                    android:gravity="center"
                    android:fontFamily="@font/poppins_light"
                    android:textAllCaps="true"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14sp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/editProfileButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:fontFamily="@font/poppins_bold"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:background="@drawable/profile_gradient_button_bg"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/profileNumbersSection"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/shareProfileButton"
            tools:ignore="VisualLintButtonSize" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/shareProfileButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/share_profile"
            android:fontFamily="@font/poppins_bold"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:background="@drawable/profile_button_gradient_outline_bg"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/profileNumbersSection"
            app:layout_constraintLeft_toRightOf="@id/editProfileButton"
            app:layout_constraintRight_toRightOf="parent"
            tools:ignore="VisualLintButtonSize" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/profileTabLayout"
            android:layout_width="0dp"
            android:layout_height="?actionBarSize"
            android:contentDescription="@string/profile_tab_for_posts_incubates"
            android:background="@color/dark_background"
            app:tabTextColor="@color/white"
            app:tabIndicatorColor="@color/pink"
            app:tabSelectedTextColor="@color/pink"
            app:tabGravity="fill"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editProfileButton"/>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/profileViewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>