<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/characterImageView"
        android:layout_width="300dp"
        android:layout_height="450dp"
        android:src="@drawable/character"
        android:contentDescription="@string/character_animation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/taglineTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/incubator_tagline"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_extrabold"
        android:layout_marginTop="-32dp"
        android:textSize="36sp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/characterImageView"/>

    <TextView
        android:id="@+id/appDescTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taglineTextView"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_regular"/>

    <Button
        android:id="@+id/incubateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue_accent"
        android:text="@string/let_s_incubate"
        android:elevation="5dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        app:cornerRadius="12dp"
        android:fontFamily="@font/poppins_regular"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appDescTextView"/>


</androidx.constraintlayout.widget.ConstraintLayout>