<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/addPostAppBar"
        android:layout_width="0dp"
        android:layout_height="?actionBarSize"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/dark_background"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/nextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:fontFamily="@font/poppins_bold"
                android:textSize="18sp"
                android:textColor="@color/blue_accent"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="16dp"/>

            <ImageView
                android:id="@+id/closeButton"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="start|center_vertical"
                android:contentDescription="@string/close_icon"
                android:src="@drawable/close_square"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/new_post"
                android:textColor="@color/white"
                android:layout_gravity="center_vertical"
                android:textSize="22sp" />

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/postViewCard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addPostAppBar">

        <ImageView
            android:id="@+id/postImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/dark_background"
            android:contentDescription="@string/user_new_post"
            android:scaleType="centerCrop"
            android:src="@drawable/splash"
            tools:ignore="ImageContrastCheck" />

        <ImageButton
            android:id="@+id/fitImageButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="start|bottom"
            android:layout_margin="12dp"
            android:alpha="0.7"
            android:background="@drawable/action_button_bg"
            android:contentDescription="@string/fit_screen"
            android:src="@drawable/fit_screen"
            app:tint="@color/white" />

        <ImageButton
            android:id="@+id/actionCameraButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end|bottom"
            android:layout_margin="12dp"
            android:alpha="0.7"
            android:background="@drawable/action_button_bg"
            android:contentDescription="@string/camera_icon"
            android:src="@drawable/camera_outline"
            app:tint="@color/white" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/imagePathView"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/dark_background"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postViewCard">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingEnd="16dp"
            android:paddingStart="16dp">

            <Spinner
                android:id="@+id/imagePathSpinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"/>

            <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/add_multiple_check"
                android:background="@android:color/transparent"
                app:tint="@color/white"
                android:layout_gravity="end|center_vertical"
                android:contentDescription="@string/select_multiple_check"/>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        tools:listitem="@layout/image_item_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imagePathView"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>